fixing z-index on safari

--- a/main.css
+++ b/main.css
@@ -280,6 +280,7 @@ a {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 3; /* Sit on top */
+  -webkit-transform: translate3d(0,0,0);
   padding-top: 100px; /* Location of the box */
   left: 0;
   top: 0;
